fixed about section vertical scrollbar bug

--- a/css/custom.css
+++ b/css/custom.css
@@ -30,12 +30,6 @@ h4{
     font-size: 1.4em; 
     text-align: left;
 }
-h5{
-   font-size: 1em; 
-}
-h6{
-   font-size: 1em; 
-}
 
 body, p {
     width: 100%;
@@ -92,7 +86,7 @@ ul{
 #about {
     margin-left: 12vw;
     margin-right: 12vw;
-    height: 100%;
+    max-height: auto;
     
 }
 
